--- a/index.html
+++ b/index.html
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
-<html>
+<!-- ICS2O-Unit1-03-HTML-hello_world-->
+<html lang="en-ca">
   <head>
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta name="descrption" content="My first webpage with proper style!">
+    <meta name="keywords" content="mths, ics2o">
+    <meta name="author" content="Yuri G">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0-">
+    <title>My first webpage with proper style</title>
   </head>
-  <body>
-    <p>Paragraph</p>
+  <style>
+    #my-header {
+      background-color: rgb(38, 109, 35);
+      color: hsl(0, 0%, 100%);
+      padding: 40px;
+      text-align: center;
+    }
+  </style>
+  <body style="background-color: powderblue;">
+    <h1 id="my-header">Style is important!</h1>
+    <p style="background-color: ff00ff;">Proper HTML style is important!</p>
+    <img src="./images/landscape-photography-tips-yosemite-valley-feature.webp" alt="style">
   </body>
 </html>
